--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mistopportunity",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {
-    "electron": "^4.0.4"
+    "electron": "^4.0.4",
+    "electron-packager": "^13.0.1"
   }
 }
