--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "author": "mistopportunity",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {
-    "electron": "^4.0.5"
+    "electron": "^4.0.5",
+    "electron-rebuild": "^1.8.4"
+  },
+  "dependencies": {
+    "greenworks": "git+https://github.com/greenheartgames/greenworks.git"
+  },
+  "chromium-args": "--in-process-gpu --disable-transparency",
+  "build": {
+    "files": [
+      "!node_modules/greenworks/deps/**/*"
+    ]
   }
 }
