--- a/.gitignore
+++ b/.gitignore
@@ -260,5 +260,7 @@ paket-files/
 __pycache__/
 *.pyc
 
-uv27-win32-x64/
-uv27-win32-ia32/
+You Versus 27 Elves-win32-x64/
+You Versus 27 Elves-win32-ia32/
+win32 ia32.7z
+win32 x64.7z
